--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,5 +106,6 @@
     </string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_barcode_scan">BarcodeScan</string>
+    <string name="title_activity_initial_map">Map</string>
 
 </resources>
