--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,5 +107,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_barcode_scan">BarcodeScan</string>
     <string name="title_activity_initial_map">Map</string>
+    <string name="available_manifests">Available Manifests</string>
 
 </resources>
