--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     </string>
     <string name="title_activity_welcome">Welcome</string>
     <string name="button_continue">Continue</string>
-    <string name="title_activity_download_manifests">DownloadManifests</string>
+    <string name="title_activity_download_manifests">Download Manifests</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
@@ -105,7 +105,7 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_barcode_scan">BarcodeScan</string>
+    <string name="title_activity_barcode_scan">Barcode List</string>
     <string name="title_activity_initial_map">Map</string>
     <string name="available_manifests">Available Manifests</string>
 
